[package]
name = "panic-control"
version = "0.1.0-dev"
description = "Utilities to test code with intentional panics"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools::testing"]
keywords = ["panic", "testing"]

[lib]
path = "src/panic_control.rs"
