[package]
name = "panic-control"
version = "0.1.4"
description = "Utilities to test code with intentional panics"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools::testing"]
keywords = ["panic", "testing"]
repository = "https://github.com/mzabaluev/panic-control"

[badges]
circle-ci = { repository = "mzabaluev/panic-control" }
codecov = { repository = "mzabaluev/panic-control" }

[lib]
path = "src/panic_control.rs"
